shift works correctly

--- a/styles.css
+++ b/styles.css
@@ -41,6 +41,6 @@
   color : #CD2626
 }
 
-.highlighted {
+.highlight {
   background-color: yellow;
 }
